# Devoteam-9anounAI

./: README.md
agents/bct-agent/: .gitignore  Readme.md
agents/bct-agent/Documentation/: Documentation_des_APIs.md  Rapport de Performance.md  Rapport_Comparatif_APIs.md
agents/bct-agent/backend/: Ingest_in_db.py  Questions_example  agentic_rag.py  core_logger.py  pyproject.toml  requirements.txt  vercel.json
agents/bct-agent/backend/Evaluation/: eval_dataset.json
agents/bct-agent/backend/FAISS index/: index.pkl
agents/bct-agent/backend/tests/: test_api.py
agents/bct-agent/frontend/: drizzle.config.ts  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
agents/bct-agent/frontend/src/: middleware.ts
agents/bct-agent/frontend/src/app/: globals.css  layout.tsx  page.tsx
agents/bct-agent/frontend/src/components/: nav-user.tsx
agents/bct-agent/frontend/src/components/auth/: LoginDialog.tsx
agents/bct-agent/frontend/src/components/chat/: ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  Citation.tsx  MarkdownRenderer.tsx  (+2 more)
agents/bct-agent/frontend/src/contexts/: ConversationContext.tsx  LanguageContext.tsx  SessionContext.tsx
agents/bct-agent/frontend/src/hooks/: useChat.ts
agents/bct-agent/frontend/src/locales/: ar.json  en.json  fr.json
agents/bct-agent/frontend/src/types/: index.ts
platform/: README.md  package-lock.json  package.json  tailwind.config.ts
platform/app/: layout.tsx  page.tsx
platform/app/agents/[slug]/: page.tsx
platform/components/: AgentGrid.tsx  AgentWheel.tsx  Navbar.tsx
platform/lib/: data.ts
(+9 files in other folders)
