[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arabic-reshaper>=3.0.1",
    "docling>=2.93.0",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.136.1",
    "google-cloud-aiplatform>=1.40.0",
    "google-genai>=1.75.0",
    "httpx>=0.28.1",
    "langchain>=0.1.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=0.1.0",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-google-vertexai>=0.0.5",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=0.0.1",
    "neo4j>=6.2.0",
    "pdfplumber>=0.11.9",
    "pypdf>=6.10.2",
    "pytest>=9.0.3",
    "python-bidi>=0.6.9",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
